--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "native-base": "^2.8.0",
     "react": "16.3.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-30.0.0.tar.gz",
+    "react-native-tab-bar-footer": "^1.0.5",
     "react-navigation": "^2.17.0"
   }
 }
