--- a/package.json
+++ b/package.json
@@ -11,11 +11,20 @@
   "dependencies": {
     "@expo/vector-icons": "^6.3.1",
     "axios": "^0.18.0",
+    "body-parser": "^1.18.3",
     "expo": "^30.0.1",
+    "express": "^4.16.3",
+    "morgan": "^1.9.1",
     "native-base": "^2.8.0",
+    "pg": "^7.5.0",
     "react": "16.3.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-30.0.0.tar.gz",
     "react-native-tab-bar-footer": "^1.0.5",
-    "react-navigation": "^2.17.0"
+    "react-navigation": "^2.17.0",
+    "sequelizer": "^1.1.3"
+  },
+  "devDependencies": {
+    "nodemon": "^1.18.4",
+    "sequelize-cli": "^4.1.1"
   }
 }
