--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "eject": "expo eject"
+    "eject": "expo eject",
+    "server": "nodemon backend/app.js"
   },
   "dependencies": {
     "@expo/vector-icons": "^6.3.1",
