--- a/backend/config/config.json
+++ b/backend/config/config.json
@@ -4,7 +4,10 @@
     "password": "testpass",
     "database": "piquis",
     "host": "127.0.0.1",
-    "dialect": "postgres"
+    "dialect": "postgres",
+    "define": {
+      "timestamps": false
+    }
   },
   "test": {
     "username": "root",
