--- a/backend/config/config.json
+++ b/backend/config/config.json
@@ -2,7 +2,7 @@
   "development": {
     "username": "postgres",
     "password": "testpass",
-    "database": "piquis",
+    "database": "PiquisDB",
     "host": "127.0.0.1",
     "dialect": "postgres",
     "define": {
