--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "16.3.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-30.0.0.tar.gz",
     "react-native-blur": "^3.2.2",
+    "react-native-elements": "^0.19.1",
     "react-native-tab-bar-footer": "^1.0.5",
     "react-navigation": "^2.17.0"
   }
