--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "axios": "^0.18.0",
     "body-parser": "^1.18.3",
     "expo": "^30.0.1",
+    "expo-cli": "^2.2.0",
     "express": "^4.16.3",
+    "global": "^4.3.2",
     "morgan": "^1.9.1",
     "native-base": "^2.8.0",
     "pg": "^6.4.2",
