--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "eject": "expo eject",
-    "server": "nodemon backend/app.js"
+    "server": "nodemon backend/app.js",
+    "dev": "concurrently \"yarn server\" \"yarn start\""
   },
   "dependencies": {
     "@expo/vector-icons": "^6.3.1",
     "axios": "^0.18.0",
     "body-parser": "^1.18.3",
+    "concurrently": "^4.0.1",
     "expo": "^30.0.1",
     "expo-cli": "^2.2.0",
     "express": "^4.16.3",
