--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.18.0",
     "body-parser": "^1.18.3",
     "concurrently": "^4.0.1",
+    "dotenv": "^6.1.0",
     "expo": "^30.0.1",
     "expo-cli": "^2.2.0",
     "express": "^4.16.3",
