--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-native-blur": "^3.2.2",
     "react-native-elements": "^0.19.1",
     "react-native-tab-bar-footer": "^1.0.5",
-    "react-navigation": "^2.17.0"
+    "react-navigation": "^2.17.0",
+    "react-scrolllock": "^3.0.2"
   }
 }
