--- a/package.json
+++ b/package.json
@@ -31,6 +31,11 @@
     "react-native-elements": "^0.19.1",
     "react-native-tab-bar-footer": "^1.0.5",
     "react-navigation": "^2.17.0",
-    "react-scrolllock": "^3.0.2"
+    "react-scrolllock": "^3.0.2",
+    "sequelizer": "^1.1.3"
+  },
+  "devDependencies": {
+    "nodemon": "^1.18.6",
+    "sequelize-cli": "^5.3.0"
   }
 }
