--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "expo": "^30.0.1",
     "expo-cli": "^2.2.0",
     "express": "^4.16.3",
+    "firebase": "^5.5.9",
     "global": "^4.3.2",
     "morgan": "^1.9.1",
     "native-base": "^2.8.0",
