--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "react-native-tab-bar-footer": "^1.0.5",
     "react-native-vector-icons": "^6.0.2",
     "react-navigation": "^2.17.0",
-    "react-scrolllock": "^3.0.2"
+    "react-redux": "^5.1.1",
+    "react-scrolllock": "^3.0.2",
+    "redux": "^4.0.1"
   }
 }
