--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "morgan": "^1.9.1",
     "native-base": "^2.8.0",
     "pg": "^6.4.2",
+    "prop-types": "^15.6.2",
     "react": "16.3.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-30.0.0.tar.gz",
     "react-native-blur": "^3.2.2",
